centered the body

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1 id="title1">Generate a <h1 id="title2">random password</h1></h1>
-        <p>Never use an insecure password again.</p>
-        <button id="generate-pass" onclick="generatePass()">Generate passwords</button>
-        <hr>
-        <button id="pass1" onclick="copyText()"></button>
-        <button id="pass2" onclick="copyText()"></button>
-        <script src="index.js"></script>
+        <div class="codeGen">
+            <h1 id="title1">Generate a <h1 id="title2">random password</h1></h1>
+            <p>Never use an insecure password again.</p>
+            <button id="generate-pass" onclick="generatePass()">Generate passwords</button>
+            <hr>
+            <button id="pass1" onclick="copyText()"></button>
+            <button id="pass2" onclick="copyText()"></button>
+            <script src="index.js"></script>
+        </div>
     </body>
 </html>
